// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RangeInput RangeInput baseVue demo works fine 1`] = `
<div
  class="t-range-input"
>
  <div
    class="t-range-input__inner"
  >
    <div
      class="t-input__wrap t-range-input__inner-left"
    >
      <div
        class="t-input t-size-m t-is-default"
      >
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          unselectable="off"
        />
      </div>
    </div>
    <div
      class="t-range-input__inner-separator"
    >
      -
    </div>
    <div
      class="t-input__wrap t-range-input__inner-right"
    >
      <div
        class="t-input t-size-m t-is-default"
      >
        <input
          autocomplete=""
          class="t-input__inner"
          placeholder="请输入"
          type="text"
          unselectable="off"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeInput RangeInput popupVue demo works fine 1`] = `
<div
  class="t-range-input-popup"
>
  <div
    class="t-range-input"
  >
    <div
      class="t-range-input__inner"
    >
      <div
        class="t-input__wrap t-range-input__inner-left"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <div
        class="t-range-input__inner-separator"
      >
        -
      </div>
      <div
        class="t-input__wrap t-range-input__inner-right"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeInput RangeInput sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-range-input t-size-s"
  >
    <div
      class="t-range-input__inner"
    >
      <div
        class="t-input__wrap t-range-input__inner-left"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <div
        class="t-range-input__inner-separator"
      >
        -
      </div>
      <div
        class="t-input__wrap t-range-input__inner-right"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-range-input"
  >
    <div
      class="t-range-input__inner"
    >
      <div
        class="t-input__wrap t-range-input__inner-left"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <div
        class="t-range-input__inner-separator"
      >
        -
      </div>
      <div
        class="t-input__wrap t-range-input__inner-right"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-range-input t-size-l"
  >
    <div
      class="t-range-input__inner"
    >
      <div
        class="t-input__wrap t-range-input__inner-left"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <div
        class="t-range-input__inner-separator"
      >
        -
      </div>
      <div
        class="t-input__wrap t-range-input__inner-right"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`RangeInput RangeInput statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
>
  <div
    class="t-range-input"
  >
    <div
      class="t-range-input__inner"
    >
      <div
        class="t-input__wrap t-range-input__inner-left"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <div
        class="t-range-input__inner-separator"
      >
        -
      </div>
      <div
        class="t-input__wrap t-range-input__inner-right"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-range-input"
  >
    <div
      class="t-range-input__inner"
    >
      <div
        class="t-input__wrap t-range-input__inner-left"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <div
        class="t-range-input__inner-separator"
      >
        -
      </div>
      <div
        class="t-input__wrap t-range-input__inner-right"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
    </div>
  </div>
   
  <div
    class="t-range-input"
  >
    <div
      class="t-range-input__inner"
    >
      <div
        class="t-input__wrap t-range-input__inner-left"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
      <div
        class="t-range-input__inner-separator"
      >
        -
      </div>
      <div
        class="t-input__wrap t-range-input__inner-right"
      >
        <div
          class="t-input t-size-m t-is-default"
        >
          <input
            autocomplete=""
            class="t-input__inner"
            placeholder="请输入"
            type="text"
            unselectable="off"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
